Finalização Landing Page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Enzo Grill</title>
+    <title>Enzo Games</title>
 </head>
 
 <body>
     <header>
         <nav class="navegacao">
-            <a href="#" class="logo">E<span>nz</span>O G<span>ril</span>L</a>
+            <a href="#" class="logo">E<span>nz</span>O G<span>ame</span>S</a>
             <ul class="nav-menu">
                 <li class="nav-item">
                     <a href="#">Página Inicial</a>
@@ -38,13 +38,13 @@
     <main>
         <section class="home">
             <div class="home-texto">
-                <h4 class="texto-h4">Bem vindo à Enzo Grill</h4>
-                <h1 class="texto-h1">Sabor em cada pedaço.</h1>
-                <p>Desfrute do sabor autêntico na Enzo Grill, onde cada prato é uma obra-prima de texturas irresistíveis e sabores inigualáveis. Uma experiência culinária premium que vai além das expectativas.</p>
+                <h4 class="texto-h4">Bem vindo à Enzo Games</h4>
+                <h1 class="texto-h1">Temos seu próximo jogo.</h1>
+                <p>Descubra a revolução gamer na Enzo Games: consoles e jogos que são pura emoção. Entretenimento premium, experiência única. Seja parte do futuro dos games conosco.</p>
                 <a href="#" class="home-btn">Venha conhecer</a>
             </div>
             <div class="home-img">
-                <img src="imagem.png" alt="">
+                <img src="gowps5.png" alt="">
             </div>
             <div class="spacer"></div>
         </section>
