--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <header>
         <nav class="navegacao">
-            <a href="#" class="logo">E<span>nz</span>O G<span>ame</span>S</a>
+            <a href="index.html" class="logo">E<span>nz</span>O G<span>ame</span>S</a>
             <ul class="nav-menu">
                 <li class="nav-item">
-                    <a href="#">Página Inicial</a>
+                    <a href="index.html">Página Inicial</a>
                 </li>
                 <li class="nav-item">
                     <a href="#">Sobre</a>
@@ -24,7 +24,7 @@
                     <a href="#">Menu</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#">Contato</a>
+                    <a href="contato.html">Contato</a>
                 </li>
                 <i class='bx bx-search'></i>
             </ul>
@@ -34,7 +34,7 @@
                 <span class="bar"></span>
             </div>
         </nav>
-    </header>
+    </header>    
     <main>
         <section class="home">
             <div class="home-texto">
